<resources>
    <string name="app_name">RickMortyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_name">Rick Morty</string>
    <string name="alive">Alive</string>
    <string name="episode_count">%s Eps</string>
    <string name="suggested_for_you">Suggested for you</string>
    <string name="human">Human</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="episodes">Episodes</string>
    <string name="origin">Origin</string>
    <string name="sample_dimension">Dimension C-137</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="loading_content">Please wait...</string>
    <string name="we_didn_t_find_anything">Sorry, we didn\'t find anything</string>
    <string name="search_your_character">Search your character</string>
    <string name="your_favorite_character">Your favorite character</string>
    <string name="favorite">Favorite</string>
    <string name="homepage">Homepage</string>
    <string name="discover">Discover</string>
</resources>