<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>
    <TextView
        android:id="@+id/tv_char_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        style="@style/TextAppearance.AppCompat.Headline5"/>
    <TextView
        style="@style/TextAppearance.AppCompat.Body.Large.Medium"
        android:textColor="@color/primary_dark_green"
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/tv_char_name"
        android:text="@string/alive"/>
    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_status"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="16dp">
        <TableRow
            android:layout_marginBottom="4dp">
            <ImageView
                app:tint="@color/primary_base"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_species"/>
            <TextView
                android:layout_marginStart="4dp"
                android:layout_gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Body.Large.Medium"
                android:text="@string/species"/>
            <TextView
                android:id="@+id/species_value"
                android:layout_marginStart="16dp"
                android:maxWidth="250dp"
                android:layout_gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Body.Large.Medium"
                android:text="Perempuan"/>
        </TableRow>
        <TableRow
            android:layout_marginBottom="4dp">
            <ImageView
                app:tint="@color/error_base"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="4dp"
                android:src="@drawable/ic_gender"/>
            <TextView
                android:layout_marginStart="4dp"
                android:layout_gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Body.Large.Medium"
                android:text="@string/gender"/>
            <TextView
                android:id="@+id/tv_gender_value"
                android:layout_marginStart="16dp"
                android:maxWidth="250dp"
                android:layout_gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Body.Large.Medium"
                android:text="Perempuan"/>
        </TableRow>
        <TableRow
            android:layout_marginBottom="4dp">
            <ImageView
                app:tint="@color/warning_dark"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="4dp"
                android:src="@drawable/ic_frame_episode"/>
            <TextView
                android:layout_marginStart="4dp"
                android:layout_gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Body.Large.Medium"
                android:text="@string/episodes"/>
            <TextView
                android:id="@+id/tv_episode_count"
                android:layout_marginStart="16dp"
                android:maxWidth="250dp"
                android:layout_gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Body.Large.Medium"
                android:text="Perempuan"/>
        </TableRow>
    </TableLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_mid"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/table_layout"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_mid"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                style="@style/TextAppearance.AppCompat.Body.Large.Bold"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tv_origin_dimension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_dimension"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.AppCompat.Body.Medium.Regular"
                android:textAlignment="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/tv_origin_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"/>
                <TextView
                    android:id="@+id/tv_origin_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/name"/>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/table_layout"
        app:layout_constraintStart_toStartOf="@id/guide_mid"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginStart="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                style="@style/TextAppearance.AppCompat.Body.Large.Bold"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tv_location_dimension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_dimension"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.AppCompat.Body.Medium.Regular"
                android:textAlignment="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/tv_location_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"/>
                <TextView
                    android:id="@+id/tv_location_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/name"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>